--- a/index.html
+++ b/index.html
@@ -67,15 +67,21 @@
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line" id="sobreproj"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0" id="sobreproj">Sobre o projeto</p>
+                <p class="masthead-subheading font-weight-light mb-0">Sobre o projeto</p>
                 <br>
-                <p class="textsobre">O projeto "Eventuais Contos" foi realizado com as professoras Bárbara e Cíntia, sua finalidade foi compartilhar memórias familiares.</p>
-                <p class="textsobre">Os contos consistem em histórias de gêneros diversos como: suspense, romance, terror, drama, ação e aventura.</p>
-                <p class="textsobre">Foi muito bom trabalhar com duas matérias, além de conseguir conhecer outros contos.</p>
-                <p class="textsobre">Então aproveitem o site e curtam os contos!</p>
+                <p class="textsobre">Este projeto faz parte da Unidade Escolar ETEC Prof. Maria Cristina Medeiros</p>
+                <p class="textsobre">Acontece no 1° ano do Ensino Médio – Integrado ao Técnico em Informática Para a Internet</p>
+                <p class="textsobre">Desenvolvido de julho a setembro de 2021</p>
+                <p class="textsobre">O objetivo é trabalhar a interdisciplinaridade entre os componentes Língua Portuguesa e Desenvolvimento de Sites</p>
+                <p class="textsobre">A ideia é desenvolver a escrita por meio da narração, assim foram criados os contos literários</p>
+                <p class="textsobre">Além de tudo o foco é colocar em prática os conceitos aprendidos de HTML e CSS e gerar sites responsivos que se adaptam a diferentes tamanhos de telas</p>  
+                <p class="textsobre">As competências socioemocionais também foram desenvolvidas neste projeto quando se trata de:</p>
+                <p class="textsobre">- Trabalho em Equipe;</p>
+                <p class="textsobre">- Criatividade; </p>
+                <p class="textsobre">- Pro-atividade e responsabilidade nas entregas;</p>
             </div>
         </header>
         <section id="prof" class="page-section portfolio">
@@ -155,7 +161,7 @@
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"></i><p class="parr">O sonho de um garoto<br>Gênero: </p></i></div>
+                                <div class="portfolio-item-caption-content text-center text-white"></i><p class="parr">O sonho de um garoto<br>Gênero: Conto Fantástico</p></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/board.png" alt="História sobre um sonho de um garoto." />
                         </div>
@@ -164,7 +170,7 @@
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"></i><p class="parr">Um dente no Magic City<br>Gênero: </p></i></div>
+                                <div class="portfolio-item-caption-content text-center text-white"></i><p class="parr">Um dente no Magic City<br>Gênero: Aventura</p></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/tooth.svg" alt="Uma história sobre um dente." />
                         </div>
@@ -219,7 +225,7 @@
                           <div class="member">
                             <div class="pic"><img class="equipe" src="assets/img/equipe/rafael.jpeg" alt=""></div>
                             <h4 class="nomes">Rafael Lima</h4>
-                            <span>Blá blá blá</span>
+                            <span>Olá, eu sou o Rafael da turma do 1ºC no curso de informática para a internet!</span>
                             <div class="social">
                               <a href=""><i class="fab fa-github" target="_blank"></i></a>
                               <a href="https://wa.me/5511979859117" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -813,6 +819,10 @@
                                         acabar com uma memória que deveria ser boa.</p>
                                     <p class="p-nocap">Essa é uma história convivida por mim.</p>
                                     <p class="p-nocap" style="text-indent: 0; text-align: center;"><b>— Luís Otávio Nascimento Reis</b></p>
+                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Fechar Conto
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -842,8 +852,8 @@
                                     <audio src="audio/Upsetter - The Mini Vandals.mp3" controls autoplay type="midia/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Em um pequeno vilarejo, um jovem novo, porém habilidoso, possuía
-                                        o sonho de se tornar um cavaleiro. Um dia seu talento para espada o foi
-                                        reconhecido fazendo se tornar um habilidoso cavaleiro, um dia mostrando
+                                        o sonho de se tornar um cavaleiro. Um dia seu talento com espada o foi
+                                        reconhecido concretizando seu sonho. Mostrando
                                         sua habilidade no campo de treino no meio de cavaleiros uma pessoa
                                         escondida entre o grupo de cavalaria diz:</p>
                                     <p class="p-nocap">— Eu te desafio para um duelo. — Gritou um cavaleiro. Entretanto,
@@ -854,12 +864,12 @@
                                         diz novamente:</p>
                                     <p class="p-nocap">— Eu desafio você para um duelo! — Diz o cavaleiro que ninguém
                                         sabe quem é, mas dessa vez com um tom de ameaça.</p>
-                                    <p class="p-nocap">— Um desafio, para quê? — Pergunta o cavaleiro.
+                                    <p class="p-nocap">— Um desafio, para quê? — Pergunta o jovem.
                                     </p>
                                     <p class="p-nocap">— Ora para quê? Estou te desafiando para mostrar de que você não é
                                         capaz de ao menos segurar uma lança. — Zomba o cavaleiro desconhecido.</p>
                                     <p class="p-nocap">— Se for esse o motivo, me recuso a participar de um duelo com
-                                        alguém que não tem honra de ser um cavaleiro!</p>
+                                        alguém que não tem honra!</p>
                                     <p class="p-nocap">— Então que tal se disputarmos pela honra? Então, o que você me
                                         diz?</p>
                                     <p class="p-nocap">— Para que você renuncie o seu voto como cavaleiro? Então eu
@@ -869,22 +879,22 @@
                                         desconhecido.
                                         </p>
                                     <p class="p-nocap">Desafiado para uma batalha, valendo a sua honra como cavaleiro,
-                                        sendo que o perdedor deverá renunciar seu juramento como cavaleiro, o
+                                        sendo que o perdedor deverá renunciar seu juramento como cavaleiro e o
                                         ganhador por sua vez teria mais reputação. O duelo seria no campo para os
                                         torneios entre cavaleiros, perto da capital real.
                                         </p>
                                     <p class="p-nocap">O duelo seria uma Justa. Justas são disputas entre dois cavaleiros,
-                                        onde dois cavaleiros montados á cavalos e armados com lanças onde o
+                                        onde dois cavaleiros montados á cavalos e armados com lanças tendo o principal
                                         objetivo é derrubar o adversário. O duelo seria no começo do pôr-do-sol.</p>
                                     <p class="p-nocap">Preparando para o dia do duelo, foi às pressas para a capital,
                                         chegando lá se deparou com o campo para o torneio, ao entrar se espantou
                                         com o público que estava no local para ver o duelo entre cavaleiros.
-                                        Pensando que seria somente uma disputa entre dois cavaleiros e um
+                                        Pensando que seria somente uma disputa simples possuindo um
                                         pequeno público; mesmo assim não se importando, equipado
                                         completamente dos pés á cabeça dirigiu até o estabulo, já montado no
-                                        cavalo, foi para o encontro com o desafiante. Do outro lado estava o
-                                        denominado o cavaleiro escarlate devido à cor da sua armadura.</p>
-                                    <p class="p-nocap">— Pronto para ser humilhado cavaleiro. — Debochou o cavaleiro
+                                        cavalo, foi para o encontro do desafiante. Do outro lado estava o
+                                        denominado o cavaleiro escarlate devido à cor vermelha da sua armadura.</p>
+                                    <p class="p-nocap">— Pronto para ser humilhado jovem. — Debochou o cavaleiro
                                         escarlate.
                                         </p>
                                     <p class="p-nocap">Porém nada respondeu.</p>
@@ -894,19 +904,19 @@
                                         parar, e o público começou a se exaltar. Avançando cada vez mais rápido
                                         em direção com o único objetivo de derrubar o seu adversário. Em alta
                                         velocidade e cada vez mais rápido, em questão de segundos os cavaleiros
-                                        ficaram cara a cara, com a lança levantada na altura do escudo, o cavaleiro
-                                        o acerta com o intuito de derruba-lo e vencer o duelo, dando um fim a isso.</p>
+                                        ficaram cara a cara, com a lança levantada na altura do escudo, o jovem
+                                        tem o intuito de acertar derruba-lo e vencendo o duelo, dando um fim a isso.</p>
                                     <p class="p-nocap">Avançando com tudo sem se preocupar com a defesa, o cavaleiro
                                         escarlate aponta a lança em direção ao pescoço do adversário. Mas
                                         preocupado com a defesa, o cavaleiro aponta a lança em direção ao braço
                                         do adversário.</p>
                                     <p class="p-nocap">Ao acertar, o cavaleiro escarlate cai no chão, sendo assim derrotado e
-                                        o cavaleiro conseguindo sua vitória, o público exaltado e confuso porque o
+                                        o jovem conseguindo sua vitória, o público exaltado e confuso porque o
                                         cavaleiro escarlate tinha sido derrotado, mesmo sendo favorito a vencer. O 
                                         24
                                         cavaleiro escarlate é derrotado e renunciado de ser um cavaleiro, jurando
                                         vingança ao seu adversário.</p>
-                                    <p class="p-nocap">Voltando para onde veio, o vitorioso cavaleiro percebe que foi
+                                    <p class="p-nocap">Voltando para onde veio, o vitorioso jovem percebe que foi
                                         atingido no duelo, mesmo sendo apenas uma ferida superficial, sendo
                                         assim, para sempre se recordar disso, ficou em sua pele uma cicatriz de
                                         batalha.
