--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Fantasmas.wav" controls autoplay type="audio/wav"></audio>
+                                    <audio src="audio/Fantasmas.mp3" controls autoplay type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Num dia nublado, ao norte vinha uma aragem fria, era uma manhã de
                                         março. Um garoto estava viajando com sua família para visitar seus avós,
@@ -704,7 +704,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Sonho.wav" controls autoplay type="audio/wav"></audio>
+                                    <audio src="audio/Sonho.mpeg" controls autoplay type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Essa pequena história começa com um garoto que tem um sonho de
                                         se tornar um artista profissional, ele morava numa cidade pequena, não era
