--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Sonho.mpeg" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/Sonho.mp3" controls autoplay type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Essa pequena história começa com um garoto que tem um sonho de
                                         se tornar um artista profissional, ele morava numa cidade pequena, não era
