--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                           <div class="member">
                             <div class="pic"><img class="equipe" src="assets/img/equipe/lois.jpeg" alt=""></div>
                             <h4 class="nomes">Luís Reis</h4>
-                            <span>Olá, me chamo Luís Reis do 1°C :D</span>
+                            <span>Olá, me chamo Luís Reis do 1°C.</span>
                             <div class="social">
                               <a href="https://www.instagram.com/reisluisz/" target="_blank"><i class="fab fa-instagram"></i></a>
                               <a href="https://github.com/luisnreis" target="_blank"><i class="fab fa-github"></i></a>
@@ -237,7 +237,7 @@
                           <div class="member">
                             <div class="pic"><img class="equipe" src="assets/img/equipe/yvri.jpeg" alt=""></div>
                             <h4 class="nomes">Yuri Candido</h4>
-                            <span>Sou o Yuri! 1°C de Informática para Web</span>
+                            <span>Sou o Yuri! 1°C de Informática para Web.</span>
                             <div class="social">
                               <a href="https://github.com/projects-yuri" target="_blank"><i class="fab fa-github"></i></a>
                               <a href="https://wa.me/5511996338103" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -327,7 +327,7 @@
                                         desaparece, deixando dúvida e inquietação no pequeno garoto. Correu para
                                         a janela e fechou as cortinas, não queria pensar naquilo durante a noite.</p>
                                     <p class="p-nocap">De fato, não conseguiria parar de pensar, era algo de se pensar ao
-                                        menos durante uma semana, algo que não acontecia em sua vida</p>
+                                        menos durante uma semana, algo que não acontecia em sua vida.</p>
                                     <p class="p-nocap">A respiração era arfante. Pensou por um momento e tentou respirar,
                                         após um tempo, relaxou, deitou-se na cama e identificou os móveis velhos
                                         ao redor, a cama era barulhenta o suficiente para tirar a atenção dele. E
