--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Fantasmas.mp3" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/Fantasmas.mp3" controls type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Num dia nublado, ao norte vinha uma aragem fria, era uma manhã de
                                         março. Um garoto estava viajando com sua família para visitar seus avós,
@@ -445,7 +445,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/O casal predestinado.mpeg" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/O casal predestinado.mpeg" controls type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Uma história que conta sobre um casal reunido pelo destino... o ano
                                         era 1972, nascia em um pequeno município na Bahia uma menina de
@@ -522,7 +522,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Castelo Hoffen.mpeg" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/Castelo Hoffen.mpeg" controls type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Em um dia ensolarado ao sul de um reino chamado <i>Vertrauen</i> uma
                                         pessoa de uma família nobre vivia na parte mais rica do reino, após anos de
@@ -704,7 +704,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Sonho.mp3" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/Sonho.mp3" controls type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Essa pequena história começa com um garoto que tem um sonho de
                                         se tornar um artista profissional, ele morava numa cidade pequena, não era
@@ -768,7 +768,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Um dente no Magic City.mpeg" controls autoplay type="audio/mpeg"></audio>
+                                    <audio src="audio/Um dente no Magic City.mpeg" controls type="audio/mpeg"></audio>
                                     <br>
                                     <p class="p-cap">Essa é história seu apresenta a vocês um dos melhores dias da minha
                                         vida...</p>
@@ -849,7 +849,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
-                                    <audio src="audio/Cicatrizes de batalha.mp4" controls autoplay type="audio/mp4"></audio>
+                                    <audio src="audio/Cicatrizes de batalha.mp4" controls type="audio/mp4"></audio>
                                     <br>
                                     <p class="p-cap">Em um pequeno vilarejo, um jovem novo, porém habilidoso, possuía
                                         o sonho de se tornar um cavaleiro. Um dia seu talento com espada o foi
