--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@
                 </div>
             </div>
         </section>
+        <section id="anim" class="animation">
+            <iframe width="560" height="415" src="https://www.youtube.com/embed/bpsgm_XULdc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
         <!-- Portfolio Section-->
-        <section id="contos" class="page-section portfolio" id="portfolio">
+        <section id="contos" class="page-section portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contos</h2>
