--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
                                     <p class="p-nocap">— MÃE! PAI! — A voz estremecida era reconhecida facilmente —
                                         TEM ALGO NESSA CASA!</p>
                                     <p class="p-nocap">Num instante, os pais já estavam de pé, olhando-o assustados.</p>
-                                    <p class="p-nocap">— O que foi? — Diz a mãe com o rosto de desespero.</p>
+                                    <p class="p-nocap">— O que foi? — Dizia a mãe com o rosto de desespero.</p>
                                     <p class="p-nocap">— Tem algo aqui! Tem algo nessa casa! Tem uma sombra, não sei o
-                                        que é; não quero ficar mais tempo nesse lugar! — Dizia, tendendo ao
+                                        que é; não quero ficar mais tempo nesse lugar! — Dizia, segurando o
                                         choro.</p>
                                     <p class="p-nocap">— Se acalme, você pode dormir aqui hoje, fique aqui e eu vou
                                         verificar a casa. — Disse o pai, tentando acalmar o garoto, mas com um
@@ -665,10 +665,9 @@
                                         último dia pois ninguém sabe se você estará vivo para continuar no dia
                                         seguinte.</p>
                                     <p class="p-nocap">Dito isso o mordomo observando as sábias palavras do aventureiro
-                                        começou a refletir sobre si mesmo e o que está acontecendo, antes mesmo 
-                                        18
-                                        de agradecer o aventureiro continuou a sua jornada seguindo para o sul em
-                                        rumo a continuar o que escolhe para sua vida.
+                                        começou a refletir sobre si mesmo e o que estava acontecendo, antes mesmo
+                                        de agradecer o aventureiro continuou sua jornada seguindo para o sul em
+                                        rumo a continuar.
                                         </p>
                                     <p class="p-final"><b>Continua...</b></p>  
                                     <p class="p-glossario"><b>Glossário</b></p>
@@ -737,6 +736,7 @@
                                         na mente, e o quadro começou a se desfazer.</p>
                                     <p class="p-nocap">Depois daquele momento, ele acordou; olhando ao redor viu que
                                         estava sentado em sua cama com dois pincéis na mão, pintando o ar.</p>
+                                    <p class="p-nocap" style="text-align: center;">——BASEADO EM FATOS REAIS——</p> 
                                     <p class="p-nocap">Esse sonho foi bem estranho, quis compartilhar com você. Isso
                                         aconteceu com uma pessoa que conheci a muito tempo, e, infelizmente não
                                         tenho mais contato com ela.</p>
@@ -855,7 +855,7 @@
                                     <audio src="audio/Cicatrizes de batalha.mp4" controls type="audio/mp4"></audio>
                                     <br>
                                     <p class="p-cap">Em um pequeno vilarejo, um jovem novo, porém habilidoso, possuía
-                                        o sonho de se tornar um cavaleiro. Um dia seu talento com espada o foi
+                                        o sonho de se tornar um cavaleiro. Um dia seu talento com espada foi
                                         reconhecido concretizando seu sonho. Mostrando
                                         sua habilidade no campo de treino no meio de cavaleiros uma pessoa
                                         escondida entre o grupo de cavalaria diz:</p>
@@ -894,7 +894,7 @@
                                         com o público que estava no local para ver o duelo entre cavaleiros.
                                         Pensando que seria somente uma disputa simples possuindo um
                                         pequeno público; mesmo assim não se importando, equipado
-                                        completamente dos pés á cabeça dirigiu até o estabulo, já montado no
+                                        completamente dos pés a cabeça dirigiu até o estabulo, já montado no
                                         cavalo, foi para o encontro do desafiante. Do outro lado estava o
                                         denominado o cavaleiro escarlate devido à cor vermelha da sua armadura.</p>
                                     <p class="p-nocap">— Pronto para ser humilhado jovem. — Debochou o cavaleiro
